educates/templates/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-awesome-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: #@ "my-awesome-app-{SESSION_NAMESPACE}.{INGRESS_DOMAIN}".format(**data.values)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-awesome-app-service
            port:
              number: 80
