educates/templates/tektonui.yaml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: #@ "tekton-{SESSION_NAMESPACE}.{INGRESS_DOMAIN}".format(**data.values)
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
